# Whisper-Live-Transcription

./: README.md  pyproject.toml
whisper_live_transcription/: output.py  sound_capture.py  transcribe.py  ui.py  util.py
